--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,8 @@
    },
    "dependencies": {
       "dotenv": "^17.2.3",
-      "express": "^5.1.0"
+      "express": "^5.1.0",
+      "openai": "^6.15.0",
+      "zod": "^4.2.1"
    }
 }
