--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,12 +9,14 @@
    },
    "devDependencies": {
       "@types/bun": "latest",
-      "@types/express": "^5.0.5"
+      "@types/express": "^5.0.5",
+      "prisma": "^7.3.0"
    },
    "peerDependencies": {
       "typescript": "^5"
    },
    "dependencies": {
+      "@prisma/client": "^7.3.0",
       "dotenv": "^17.2.3",
       "express": "^5.1.0",
       "openai": "^6.15.0",
