--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,7 +24,16 @@
       "react-loading-skeleton": "^3.5.0",
       "react-markdown": "^10.1.0",
       "tailwind-merge": "^3.4.0",
-      "tailwindcss": "^4.1.18"
+      "tailwindcss": "^4.1.18",
+      "@radix-ui/react-dialog": "^1.1.2",
+      "@radix-ui/react-dropdown-menu": "^2.1.2",
+      "@radix-ui/react-select": "^2.1.2",
+      "@radix-ui/react-tabs": "^1.1.1",
+      "@radix-ui/react-tooltip": "^1.1.4",
+      "@radix-ui/react-separator": "^1.1.1",
+      "@radix-ui/react-scroll-area": "^1.2.0",
+      "@radix-ui/react-label": "^2.1.0",
+      "sonner": "^1.7.1"
    },
    "devDependencies": {
       "@eslint/js": "^9.39.1",
